integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_transfer_v2_without_collection__transfer.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 975
expression: asset_after_transfer
---
{
  "interface": "V1_NFT",
  "id": "6H3vEmt8dy8cZnsikDzkZSSvuH7yJvbeKAWTYYvvt2es",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "rwAmqrKD9ta6QtepCjj8ZPDMThKDs8cfXw85fGnLCM6",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "EHnEc36MD4gW2VvnJZ8LCDovJFRamyWSgfAh9EckHSdP",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "3mG2ogUZaUxX7TKRbDNDUPnesYghsd87YFAduqs4TETk",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "CJPs2F7tY8sVNgfg8xit3zX44Qhri6YkEvns9rrp55wb",
    "tree": "GkARgHx4PKnDmoVCDu48BdSqjxDzdWXW65snQDF9sCBr",
    "seq": 2,
    "leaf_id": 0
  },
  "grouping": [],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.05,
    "basis_points": 500,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "ALk8WMqaGd8chsKt3eLoZwoLgQ3CJuXVELPYVw2HFVt2"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
